# template_cli_agent

./: .ac_cdd_session.json  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN_FLOW.md  DEV_FLOW.md  Dockerfile  Makefile  README.md  Si_bulk.cif  ac_cdd.toml  ac_cdd_config.py  ac_cdd_settings.py  config.yaml  config_valid.yaml  docker-compose.yml  dosa_test.py  entrypoint.sh  manage.py  mypy_final_check.txt  mypy_output.txt  mypy_output_3.txt  mypy_pre_submit.txt  project_state.json  pyproject.toml  run_pipeline.py  setup_ac_cdd.py  setup_template.sh  verify_fps.ipynb  verify_md_run.ipynb
.github/workflows/: ci.yml
AGENT_DOCS/: DEV_FLOW.md
ac_cdd_core/: agents.py  cli.py  config.py  domain_models.py  graph.py  graph_nodes.py  messages.py  sandbox.py  service_container.py  session_manager.py  state.py  utils.py
ac_cdd_core/services/: __init__.py  contracts.py  git_ops.py  jules_client.py  llm_reviewer.py  plan_auditor.py
calculations/id_1/: pw.in  pw.out
configs/: cycle01_config.yaml
contracts/: schemas.py
dev_documents/: ALL_SPEC.md  ARCHITECT_INSTRUCTION.md  DEV_FLOW.md  README.md  SYSTEM_ARCHITECTURE.md  plan_status.json
dev_documents/CYCLE01/: SPEC.md  UAT.ipynb  UAT.md  schema.py  session_report.json  test_execution_log.txt  test_execution_log.xml  verify_data.ipynb
dev_documents/CYCLE02/: SPEC.md  UAT.md  session_report.json  test_execution_log.txt
dev_documents/CYCLE03/: SPEC.md  UAT.md  session_report.json  test_execution_log.txt
dev_documents/CYCLE04/: SPEC.md  UAT.md
dev_documents/CYCLE05/: SPEC.md  UAT.md
dev_documents/CYCLE99/: session_report.json  test_execution_log.txt
dev_documents/system_prompts/: ARCHITECT_INSTRUCTION.md  AUDITOR_INSTRUCTION.md  CODER_INSTRUCTION.md  COMMUNICATION_PLAN.md  RISK_MANAGEMENT.md  SYSTEM_ARCHITECTURE.md  plan_status.json
dev_documents/system_prompts/CYCLE01/: SPEC.md  UAT.md  session_report.json  test_execution_log.txt
dev_documents/system_prompts/CYCLE02/: SPEC.md  UAT.md
dev_documents/system_prompts/CYCLE03/: SPEC.md  UAT.md
dev_documents/system_prompts/CYCLE04/: SPEC.md  UAT.md
dev_documents/system_prompts/CYCLE05/: SPEC.md  UAT.md
dev_documents/system_prompts/CYCLE06/: SPEC.md  UAT.md
dev_documents/system_prompts/CYCLE07/: SPEC.md  UAT.md
dev_documents/system_prompts/CYCLE08/: SPEC.md  UAT.md
dev_documents/templates/: .env.example  ALL_SPEC.md  ARCHITECT_INSTRUCTION.md  AUDITOR_INSTRUCTION.md  CODER_INSTRUCTION.md  CYCLE_PLANNING_PROMPT.md  qa_analyst.md  tester.md
dev_documents/templates/cycle/: SPEC.md  UAT.md
dev_src/ac_cdd_core/: agents.py  cli.py  config.py  domain_models.py  error_messages.py  graph.py  graph_nodes.py  hash_utils.py  interfaces.py  messages.py  presentation.py  process_runner.py  sandbox.py  service_container.py  session_manager.py  state.py  tools.py  tools_fs.py  utils.py  validators.py
dev_src/ac_cdd_core/prompts/: coder.md  planner.md  structurer.md
dev_src/ac_cdd_core/services/: __init__.py  aider_client.py  artifacts.py  audit_orchestrator.py  coder_service.py  contracts.py  git_ops.py  (+7 more)
dev_src/scripts/: dump_session_activities.py
dev_src/tests/: test_jules_client_logic.py
documents/: AUDIT_REPORT.md  architecture.md  conventions.md  requirements.md
documents/templates/: SPEC_TEMPLATE.md
models/: mace_model_placeholder.pt  trained_model.pt
scripts/: ai_controller.py  ai_fix.sh  ai_gen_contract.sh  ai_gen_test.sh  ai_orchestrator.py  ai_review.sh
src/: agent_interface.py  jules_api_client.py  jules_cli_client.py  main.py
src/ac_cdd/: agents.py  cli.py  config.py  domain_models.py  gemini_api_client.py  graph.py  jules_api_client.py  orchestrator.py  presentation.py  sandbox.py  service_container.py  state.py  tools.py  utils.py
src/ac_cdd_core/: agents.py  cli.py  graph.py  main.py  service_container.py  state.py
src/mlip_autopipec/: __main__.py  app.py  cli.py  config.py  constants.py  database.py  domain_models.py  factories.py  interfaces.py  main.py  main_cycle01.py  orchestrator.py  orchestrator_cycle01.py  runners.py  web_ui.py  workflow.py
templates/: manage.py  pyproject.toml
templates/contracts/: schema.py
templates/documents/: UAT_TEMPLATE.md
templates/scripts/: ai_orchestrator.py
tests/: conftest.py  mock_jules.py  reproduce_issue.py  test_cli.py  test_config.py  test_config.yaml  test_generator.py  test_orchestrator.py  test_storage.py
tests/ac_cdd/: conftest.py  debug_aider.py  debug_llm_reviewer_jules.py  test_file_patcher.py  test_graph.py  test_review_capability.py  test_workflow_refactor.py
tests/data/: qe_fail.out  qe_success.out
tests/e2e/: Si_bulk.cif  h_atom.xyz  test_config.yaml  test_cycle01_workflow.py  test_cycle02_workflow.py  test_pipeline.py  test_refactored_workflow.py  test_structure.cif  test_workflow.py
tests/integration/: test_audit_loop.py  test_cli_commands.py  test_cli_pipeline.py  test_cli_workflow.py  test_end_to_end_workflow.py  test_integration.py  test_workflow.py
tests/uat/: C01_UAT.ipynb  CYCLE01_UAT.ipynb  UAT_CYCLE_01.ipynb  cycle01_verification.ipynb  run_cycle01_failure.py  run_cycle01_happy_path.py  verify_cycle1_output.ipynb  verify_output.ipynb
tests/unit/: conftest.py  test_alloy_generator.py  test_ase_db.py  test_audit_orchestrator.py  test_baseline_potentials.py  test_cli_reconstruction.py  test_config.py  test_config.yaml  test_config_expander.py  test_config_loader.py  test_config_models.py  test_data.py  test_database.py  test_dft_utils.py  test_exploration.py  test_explorer.py  test_generator.py  test_git_operations.py  test_graph.py  test_jules_client.py  test_jules_client_fixes.py  test_jules_client_logic.py  test_labeling_engine.py  test_labelling_engine.py  test_llm_reviewer.py  test_log_filter.py  test_molecule_generator.py  test_orchestrator.py  test_physics.py  test_plan_auditor.py  test_prompt_paths.py  test_pydantic_models.py  test_sandbox.py  test_sandbox_utils.py  test_session_manager.py  test_session_resume.py  test_structure_generator.py  test_training_engine.py  test_workflow_orchestrator.py
(+154 files in other folders)
