[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autonomous-dev-env"
version = "0.1.0"
description = "AI-Native Cycle-Based Contract-Driven Development Environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic~=2.11.0",
    "python-dotenv",
    "pydantic-settings",
    "pydantic-ai>=0.0.18",
    "langgraph>=1.0.5",
    "e2b-code-interpreter>=2.4.1",
    "httpx>=0.28.1",
    "google-auth>=2.43.0",
    "litellm>=1.80.11",
    "typer",
    "rich",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[project.scripts]
ac-cdd = "ac_cdd_core.cli:app"

[dependency-groups]
dev = [
    "shellingham",
    "pytest",
    "pytest-cov",
    "hypothesis",
    "playwright",
    "vcrpy",
    "ruff",
    "google-genai",
    "mypy",
    "bandit",
    "types-PyYAML",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.5.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
# E/F/I: Basic, B: Bugbear, S: Bandit, UP: pyupgrade
select = [
    "F",    # Pyflakes (基本エラー)
    "E", "W", # pycodestyle (スタイル)
    "C90",  # mccabe (複雑度チェック: AIのスパゲッティコード防止)
    "I",    # isort (import整頓)
    "N",    # pep8-naming (命名規則: クラス名や関数名の適正化)
    "UP",   # pyupgrade (最新構文)
    "YTT",  # flake8-2020 (sys.version誤用の防止)
    "ANN",  # flake8-annotations (型ヒント強制: 最重要)
    "ASYNC",# flake8-async (非同期バグ防止)
    "S",    # flake8-bandit (セキュリティ)
    "BLE",  # flake8-blind-except (全エラーキャッチの禁止)
    "B",    # flake8-bugbear (バグの温床検知)
    "A",    # flake8-builtins (組み込み関数名の上書き防止: id, listなどを変数名にさせない)
    "C4",   # flake8-comprehensions (リスト内包表記の最適化)
    "DTZ",  # flake8-datetimez (タイムゾーン強制)
    "T10",  # flake8-debugger (デバッガの消し忘れ防止)
    "EM",   # flake8-errmsg (例外メッセージの品質向上)
    "ICN",  # flake8-import-conventions (importエイリアスの統一: pd, npなど)
    "PIE",  # flake8-pie (雑多なコード改善)
    "T20",  # flake8-print (print文の残存禁止: loggerを使わせる)
    "PT",   # flake8-pytest-style (テストコードの品質向上)
    "RET",  # flake8-return (return文の整合性)
    "SIM",  # flake8-simplify (簡潔な記述)
    "TID",  # flake8-tidy-imports (importの整理)
    "ARG",  # flake8-unused-arguments (不要な引数削除)
    "PTH",  # flake8-use-pathlib (os.path禁止 -> pathlib強制)
    "ERA",  # eradicate (コメントアウトされたコードの削除: AIの試行錯誤跡を消す)
    "PL",   # Pylint (広範なコード品質チェック)
    "TRY",  # tryceratops (例外処理の適正化)
    "RUF",  # Ruff固有ルール
]
# S101: Allow use of assert (for tests)
ignore = [
    "ANN101", # selfへの型ヒントは不要 (deprecated)
    "ANN002", # *argsへの型ヒントは省略可
    "ANN003", # **kwargsへの型ヒントは省略可
    "E501",   # 行長制限 (自動修正で直らない場合があり、開発速度を落とすため)
    "TRY003", # 例外メッセージが長すぎるという警告 (AIには厳しすぎる)
    "D",      # docstring (今回はコードの動作リスクに集中するため除外。必要なら追加)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 10 # これを超えると関数分割を促す（AIの長文関数防止）

# === 型ヒント設定 ===
[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true # _ で始まる引数は型ヒント不要


[tool.pytest.ini_options]
addopts = "--cov=dev_src --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["dev_src/ac_cdd_core", "src/mlip_autopipec"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
targets = ["dev_src"]
