[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "mlip-autopipec"
version = "0.1.0"
description = "A tool to automate the generation of training data for MLIPs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "typer",
    "pyyaml",
    "ase",
    "fastapi",
    "uvicorn",
    "python-multipart", # For web forms
    "mace-models",
    "dscribe",
    "rich"
]
[project.scripts]
mlip-autopipec = "mlip_autopipec.cli.main:app"
[tool.hatch.build.targets.wheel]
packages = ["src/mlip_autopipec"]
[tool.ruff]
target-version = "py311"
line-length = 100
fix = true
[tool.ruff.lint]
select = [
    "F", "E", "W", "C90", "I", "N", "UP", "YTT", "ANN", "ASYNC", "S",
    "BLE", "B", "A", "C4", "DTZ", "T10", "EM", "ICN", "PIE", "T20",
    "PT", "RET", "SIM", "TID", "ARG", "PTH", "ERA", "PL", "TRY", "RUF"
]
ignore = [
    "ANN101", "ANN002", "ANN003", "ANN001", "ANN401", "ARG001", "ARG005",
    "PLR2004", "E501", "TRY003", "D", "ANN201", "N806", "PLC0415", "BLE001",
    "PT019", "RUF003", "ARG002", "RUF043", "RUF059", "PLR0913", "ANN202"
]
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
[tool.ruff.lint.mccabe]
max-complexity = 10
[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
[tool.pytest.ini_options]
addopts = "--cov=src/mlip_autopipec --cov-report=term-missing"
testpaths = ["tests"]
[tool.mypy]
strict = true
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = [
    "ase.*",
    "dscribe.*"
]
ignore_missing_imports = true
